...
                        focusedLabelColor = MaterialTheme.colorScheme.primary,
                        unfocusedLabelColor = MaterialTheme.colorScheme.primary
                    ),
                    label = { Text(stringResource(R.string.activitiesscreen_additional_info_description)) },
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("activityAdditionalInfoTextField"),
                    singleLine = true
                )

                Spacer(modifier = Modifier.height(12.dp))

                Row(
...
                        }

                        TextButton(
                            onClick = { onRemoveActivity(index) },
                            modifier = Modifier
                                .size(width = 32.dp, height = 32.dp)
                                .testTag("activityDeleteButton"),
                            colors = ButtonDefaults.buttonColors(
                                containerColor = Color.Transparent
                            ),
                            contentPadding = androidx.compose.foundation.layout.PaddingValues(0.dp)
                        ) {
                            Text(
...
                        if (checkMaxActivities()) {
                            errorMessageShowed = true
                        } else {
                            showAddActivityDialog = true
                        }
                    }
                    .testTag("activitiesAddButton"),
                contentAlignment = Alignment.Center
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add activity",
                    tint = Color.White,
...
                                        nameActivityValue = truncated
                                    }
                                },
                                label = { Text(stringResource(R.string.activitiesscreen_activities_description)) },
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .testTag("activityNameTextField"),
                                singleLine = true
                            )

                            Spacer(modifier = Modifier.height(8.dp))

                            OutlinedTextField(
...
                                        addressActivityValue = truncated
                                    }
                                },
                                label = { Text(stringResource(R.string.activitiesscreen_address_activities)) },
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .testTag("activityAddressTextField"),
                                singleLine = true
                            )

                            Spacer(modifier = Modifier.height(8.dp))

                            Row(horizontalArrangement = Arrangement.spacedBy(8.dp)) {
...
                                            disabledLabelColor = MaterialTheme.colorScheme.primary,
                                            disabledTrailingIconColor = MaterialTheme.colorScheme.primary,
                                            disabledContainerColor = Color.Transparent
                                        ),
                                        modifier = Modifier
                                            .fillMaxWidth()
                                            .testTag("activityTimeTextField"),
                                    )
                                }
                                Box(
                                    modifier = Modifier
                                        .weight(1f)
                                        .clickable { showDurationSheet = true }) {
...
                                            disabledLabelColor = MaterialTheme.colorScheme.primary,
                                            disabledTrailingIconColor = MaterialTheme.colorScheme.primary,
                                            disabledContainerColor = Color.Transparent
                                        ),
                                        modifier = Modifier
                                            .fillMaxWidth()
                                            .testTag("activityDurationTextField"),
                                    )
                                }
                            }

                            Spacer(modifier = Modifier.height(24.dp))

...
