...
                    Text(
                        stringResource(R.string.initscreen_name_description),
                        color = colorResource(R.color.orange)
                    )
                },
                modifier = Modifier.fillMaxWidth()
                    .testTag("initNameTextField"),
                singleLine = true
            )

            Spacer(modifier = Modifier.height(32.dp))

            Text(
...
                            )
                        }
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .clickable { showDatePicker = true }
                        .testTag("initDateTextField"),
                    singleLine = true
                )
            }

            Spacer(modifier = Modifier.height(32.dp))

...
                    Text(
                        stringResource(R.string.initscreen_day_description),
                        color = colorResource(R.color.orange)
                    )
                },
                modifier = Modifier.fillMaxWidth()
                    .testTag("initNumDayTextField"),
                keyboardOptions = KeyboardOptions(
                    keyboardType = KeyboardType.Number,
                    imeAction = ImeAction.Done
                ),
            )

...
            TextButton(
                onClick = {
                    onNavigate("activities")
                },
                enabled = initValidation,
                modifier = Modifier.align(Alignment.End)
                    .testTag("initNextButton")
            ) {
                Text(
                    text = stringResource(R.string.initscreen_next_button),
                    fontSize = 24.sp,
                    color = if (initValidation)
                        colorResource(R.color.orange)
...
