...
                ) {
                    TextButton(
                        onClick = {
                            onCreateVacation()
                        },
                        modifier = Modifier.fillMaxWidth()
                            .testTag("activityFinishButton"),
                        colors = ButtonDefaults.textButtonColors(
                            containerColor = MaterialTheme.colorScheme.primary,
                            contentColor = Color.White
                        )
                    ) {
                        Text(
...
